# abi_stable_readme_example

./: Cargo.toml  LICENSE
application/: Cargo.toml
application/src/: main.rs
implementation/: Cargo.toml
implementation/src/: lib.rs
interface/: Cargo.toml
interface/src/: lib.rs
