[package]
name = "implementation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "example_library" # Controls name of built dynamic library
crate-type = ["cdylib"]

[dependencies]
abi_stable = "0.11.1"
interface = { path = "../interface", features = ["impls"] }
